--- a/web201516/map_web03/src/main/webapp/resources/template/layout.xhtml
+++ b/web201516/map_web03/src/main/webapp/resources/template/layout.xhtml
@@ -2,24 +2,44 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"      
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
-	
-    <h:head>
-        <title>Titolo</title>
-    </h:head>
-    
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-    <h:body>
-    	<div id="leftSide">  
-    		<ui:insert name="leftContent" />
-    	</div>
-    	
-    	<div id="content">
-    		<ui:insert name="bodyContent" />
-    
-    	</div>
-    	
-    </h:body>
+<h:head>
+	<title>Titolo</title>
+</h:head>
+
+
+<h:body>
+	<div id="leftSide">
+		<h:form>
+			<h:panelGrid columns="2" rendered="#{not loginController.logged}">
+				<h:outputText value="Username:" />
+				<h:inputText value="#{credenziali.username}" />
+				<h:outputText value="Password:" />
+				<h:inputSecret value="#{credenziali.password}" />
+
+				<h:commandButton action="#{loginController.login(credenziali)}"
+					value="Login" />
+
+			</h:panelGrid>
+
+			<h:panelGrid columns="2" rendered="#{loginController.logged}">
+
+
+				<h:commandButton action="#{loginController.logout}" value="Logout" />
+
+			</h:panelGrid>
+
+		</h:form>
+		<ui:insert name="leftContent" />
+	</div>
+
+	<div id="content">
+		<ui:insert name="bodyContent" />
+
+	</div>
+
+</h:body>
 </html>
